// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeChip render fail 1`] = `
<span
  className="outcome-chip outcome-chip-fail"
  title="4 failed"
>
  <span
    className="icon"
  >
    <OutcomeIcon
      outcomeType="fail"
    />
  </span>
  <span
    aria-hidden="true"
    className="count"
  >
     
    4
  </span>
  <span
    className="screen-reader-only"
  >
    4 failed
  </span>
</span>
`;

exports[`OutcomeChip render inapplicable 1`] = `
<span
  className="outcome-chip outcome-chip-inapplicable"
  title="4 undefined"
>
  <span
    className="icon"
  >
    <OutcomeIcon
      outcomeType="inapplicable"
    />
  </span>
  <span
    aria-hidden="true"
    className="count"
  >
     
    4
  </span>
  <span
    className="screen-reader-only"
  >
    4 undefined
  </span>
</span>
`;

exports[`OutcomeChip render incomplete 1`] = `
<span
  className="outcome-chip outcome-chip-incomplete"
  title="2 incomplete"
>
  <span
    className="icon"
  >
    <OutcomeIcon
      outcomeType="incomplete"
    />
  </span>
  <span
    aria-hidden="true"
    className="count"
  >
     
    2
  </span>
  <span
    className="screen-reader-only"
  >
    2 incomplete
  </span>
</span>
`;

exports[`OutcomeChip render pass 1`] = `
<span
  className="outcome-chip outcome-chip-pass"
  title="3 passed"
>
  <span
    className="icon"
  >
    <OutcomeIcon
      outcomeType="pass"
    />
  </span>
  <span
    aria-hidden="true"
    className="count"
  >
     
    3
  </span>
  <span
    className="screen-reader-only"
  >
    3 passed
  </span>
</span>
`;
